# PlanetarySimulation

./: meson.build
include/: InitialPositions.hpp  NumericalMethodsClass.hpp  ParticleClass.hpp  SimulationClass.hpp  Vec3Class.hpp
src/: InitialPositions.cpp  Iteration.cpp  ParticleClass.cpp  SimulationInfo.cpp  VectorClass.cpp  meson.build
